--- a/ShoppingSite/public/index.html
+++ b/ShoppingSite/public/index.html
@@ -5,17 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel='shortcut icon' type='image/x-icon' href='images/icons/favicon.ico' />
+  <link rel='shortcut icon' type='image/x-icon' href='/images/icons/favicon.ico' />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   
-  <script src="js/main.js"></script>
-  <script src="js/placeholders.min.js"></script>
+  <script src="/js/main.js"></script>
+  <script src="/js/placeholders.min.js"></script>
   <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" rel="stylesheet" type="text/css" />
   <title>I am a CCB</title>
 </head>
 <body>
 	<header class="cd-main-header">
-		<div class="cd-main-header__logo"><a href="#0"><img src="images/icons/cd-logo.svg" alt="Logo"></a></div>
+		<div class="cd-main-header__logo"><a href="#0"><img src="/images/icons/cd-logo.svg" alt="Logo"></a></div>
 
 		<nav class="cd-main-nav js-main-nav">
 			<ul class="cd-main-nav__list js-signin-modal-trigger">
@@ -27,7 +27,7 @@
 	</header>
   <header class="header">
     <a class="header__branding" href="/">
-      <img class="header__logo" src="images/icons/logo.png" alt="CCB logo"> 
+      <img class="header__logo" src="/images/icons/logo.png" alt="CCB logo"> 
       <h1 class="header__title">I am a CCB</h1>
     </a>
     <div class="header__cart">
@@ -35,7 +35,7 @@
       <h1 id="Shop_User">Guest</h1>
       <a href="#" class="view-cart" style="text-decoration: none;">
         <div class="snipcart-summary">
-          <img src="images/icons/cart.svg" alt="">
+          <img src="/images/icons/cart.svg" alt="">
           <span class="cart-total-price"></span>
         </div>
       </a>
@@ -160,7 +160,7 @@
 	
 	  <div class="product">
   <h2 class="product__name">Bubble Tea</h2>
-  <img class="product__image" src="uploads/0519-bubble-tea-14-735x1103-1.jpg" alt="">
+  <img class="product__image" src="/uploads/0519-bubble-tea-14-735x1103-1.jpg" alt="">
   <p class="product__description">Boba</p>
   <div class="product__button-container">
     <div class="product__price">$20</div>
@@ -178,7 +178,7 @@
 	
 	  <div class="product">
   <h2 class="product__name">Lakewood Guitar</h2>
-  <img class="product__image" src="uploads/777179877.g_520-w_g-1.jpg" alt="">
+  <img class="product__image" src="/uploads/777179877.g_520-w_g-1.jpg" alt="">
   <p class="product__description">Expensive AAA Guitar</p>
   <div class="product__button-container">
     <div class="product__price">$3500</div>
@@ -196,7 +196,7 @@
 	
 	  <div class="product">
   <h2 class="product__name">McSpicy</h2>
-  <img class="product__image" src="uploads/product-mcspicy-1.png" alt="">
+  <img class="product__image" src="/uploads/product-mcspicy-1.png" alt="">
   <p class="product__description">When will Macs reopen</p>
   <div class="product__button-container">
     <div class="product__price">$75</div>
@@ -214,7 +214,7 @@
 	
 	  <div class="product">
   <h2 class="product__name">Pearl 5pc drumset w/ Hardware</h2>
-  <img class="product__image" src="uploads/download.png" alt="">
+  <img class="product__image" src="/uploads/download.png" alt="">
   <p class="product__description">Roadshow drumset</p>
   <div class="product__button-container">
     <div class="product__price">$2600</div>
@@ -232,7 +232,7 @@
 	
 	  <div class="product">
   <h2 class="product__name">Stradivarius Violin</h2>
-  <img class="product__image" src="uploads/5PAXQTCPYMYOZLJYWBJNI6QHYA.webp" alt="">
+  <img class="product__image" src="/uploads/5PAXQTCPYMYOZLJYWBJNI6QHYA.webp" alt="">
   <p class="product__description">Rich people instrument</p>
   <div class="product__button-container">
     <div class="product__price">$1200000</div>
@@ -250,7 +250,7 @@
 	
 	  <div class="product">
   <h2 class="product__name">Toilet Roll</h2>
-  <img class="product__image" src="uploads/1200px-Toiletpapier_%28Gobran111%29.jpg" alt="">
+  <img class="product__image" src="/uploads/1200px-Toiletpapier_%28Gobran111%29.jpg" alt="">
   <p class="product__description">While stocks last</p>
   <div class="product__button-container">
     <div class="product__price">$5</div>
@@ -268,7 +268,7 @@
 	
 	  <div class="product">
   <h2 class="product__name">Viola</h2>
-  <img class="product__image" src="uploads/Bratsche.jpg" alt="">
+  <img class="product__image" src="/uploads/Bratsche.jpg" alt="">
   <p class="product__description">Isn&#39;t this a violin?</p>
   <div class="product__button-container">
     <div class="product__price">$1</div>
